--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -130,3 +130,17 @@ body {
 * {
   box-sizing: border-box;
 }
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+}
